fixed height on header on tablet view on the signup page

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -193,6 +193,11 @@ table {
     width: 35%;
   }
 }
+@media (max-width: 1129px) and (min-width: 501px) {
+  .signup-header .signup-nav {
+    height: max-content;
+  }
+}
 * {
   box-sizing: border-box;
 }
