--- a/less/general.less
+++ b/less/general.less
@@ -78,3 +78,11 @@
         }
     }
 }
+
+@media @tablet {
+    .signup-header {
+        .signup-nav {
+            height: max-content;
+        }
+    }
+}
